--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,16 +1,16 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"className":"site-content","layout":{"type":"constrained"}} -->
 <main class="wp-block-group site-content" style="margin-top:0;margin-bottom:0"><!-- wp:group {"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|50"}}}} -->
-    <div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--50)"><!-- wp:query-title {"type":"archive","fontSize":"x-large"} /-->
+    <div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--50)"><!-- wp:query-title {"type":"archive","fontSize":"xl"} /-->
     
     <!-- wp:term-description {"textColor":"lightgrey","fontSize":"small"} /-->
     
-    <!-- wp:separator {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|70"}}},"className":"is-style-wide"} -->
-    <hr class="wp-block-separator has-alpha-channel-opacity is-style-wide" style="margin-bottom:var(--wp--preset--spacing--70)"/>
-    <!-- /wp:separator --></div>
+    <!-- wp:separator {"className":"is-style-wide","style":{"spacing":{"margin":{"bottom":"var:preset|spacing|70"}}}} -->
+<hr class="wp-block-separator has-alpha-channel-opacity is-style-wide" style="margin-bottom:var(--wp--preset--spacing--70)"/>
+<!-- /wp:separator --></div>
     <!-- /wp:group -->
     
-    <!-- wp:pattern {"slug":"greenlight/query-grid-excerpt"} /-->
+    <!-- wp:pattern {"slug":"greenlight/query-grid"} /-->
 </main>
     <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"greenlight","tagName":"footer","className":"site-footer is-style-no-margin"} /-->
