--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,8 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
 <!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"0"}},"className":"site-content is-style-no-margin","layout":{"type":"constrained"}} -->
 <main class="wp-block-group site-content is-style-no-margin">
-    <!-- wp:pattern {"slug":"greenlight/hero-main-light"} /-->
-    <!-- wp:pattern {"slug":"greenlight/general-features-main-light"} /-->
-    <!-- wp:pattern {"slug":"greenlight/general-features-list-light"} /-->
-    <!-- wp:pattern {"slug":"greenlight/general-banner-light"} /-->
-    <!-- wp:pattern {"slug":"greenlight/general-ratings-light"} /-->
-    <!-- wp:pattern {"slug":"greenlight/general-faq-light"} /-->
-    <!-- wp:pattern {"slug":"greenlight/general-banner2-light"} /-->
+    <!-- wp:pattern {"slug":"greenlight/hero-main"} /-->
+    <!-- wp:pattern {"slug":"greenlight/brandbook"} /-->
 </main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"greenlight","tagName":"footer","className":"site-footer is-style-no-margin"} /-->
