--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|70","bottom":"var:preset|spacing|70"}}},"className":"site-content","layout":{"type":"constrained"}} -->
 <main class="wp-block-group site-content" style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--70);padding-bottom:var(--wp--preset--spacing--70)">
-<!-- wp:pattern {"slug":"greenlight/query-grid-excerpt"} /-->
+<!-- wp:pattern {"slug":"greenlight/query-grid"} /-->
 </main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"greenlight","tagName":"footer","className":"site-footer is-style-no-margin"} /-->
