--- a/templates/page.html
+++ b/templates/page.html
@@ -1,12 +1,9 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"className":"site-title-area","layout":{"type":"constrained"}} -->
-	<div class="wp-block-group site-title-area" style="margin-top:0;margin-bottom:0">
-		<!-- wp:template-part {"slug":"titlepage","theme":"greenlight","tagName":"div","className":"site-title-area"} /-->
-	</div>
+<!-- wp:group {"className":"site-title-area","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"40px","bottom":"20px"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group site-title-area" style="margin-top:0;margin-bottom:0;padding-top:40px;padding-bottom:20px"><!-- wp:post-title {"level":1,"fontSize":"xxl"} /--></div>
 <!-- /wp:group -->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"50px","bottom":"50px","right":"0","left":"0"},"margin":{"top":"0","bottom":"0"}}},"className":"site-content"} -->
-	<main class="wp-block-group site-content" style="margin-top:0;margin-bottom:0;padding-top:50px;padding-right:0;padding-bottom:50px;padding-left:0">
-		<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-	</main>
+
+<!-- wp:group {"tagName":"main","className":"site-content","style":{"spacing":{"padding":{"top":"40px","bottom":"40px","right":"0","left":"0"},"margin":{"top":"0","bottom":"0"}}}} -->
+<main class="wp-block-group site-content" style="margin-top:0;margin-bottom:0;padding-top:40px;padding-right:0;padding-bottom:40px;padding-left:0"><!-- wp:post-content {"layout":{"type":"constrained"}} /--></main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"greenlight","tagName":"footer","className":"site-footer is-style-no-margin"} /-->
