--- a/templates/single.html
+++ b/templates/single.html
@@ -1,20 +1,95 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"className":"site-title-area","layout":{"type":"constrained"}} -->
-<div class="wp-block-group site-title-area" style="margin-top:0;margin-bottom:0"><!-- wp:template-part {"slug":"titlepost","theme":"greenlight","tagName":"div","align":"wide","className":"site-title-area"} /--></div>
-<!-- /wp:group -->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"50px","bottom":"50px","right":"0","left":"0"},"margin":{"top":"0","bottom":"0"}}},"className":"site-content"} -->
-<main class="wp-block-group site-content" style="margin-top:0;margin-bottom:0;padding-top:50px;padding-right:0;padding-bottom:50px;padding-left:0">
-	<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-	<!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
-	<div class="wp-block-group"><!-- wp:pattern {"slug":"greenlight/parts-related"} /-->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"40px"}}},"layout":{"inherit":true,"type":"constrained"}} -->
+<div class="wp-block-group" style="padding-top:40px">
 	
-	<!-- wp:post-terms {"term":"post_tag","className":"is-style-greenlight-tags-color"} /-->
+	<!-- wp:post-title {"level":1,"fontSize":"xxl"} /-->
+
+	<!-- wp:group {"className":"post-meta","fontSize":"s","layout":{"type":"flex"}} -->
+	<div class="wp-block-group post-meta has-s-font-size"><!-- wp:post-date /-->
+	
+	<!-- wp:paragraph -->
+	<p>•</p>
+	<!-- /wp:paragraph -->
+	
+	<!-- wp:post-author {"showAvatar":false} /-->
+	
+	<!-- wp:paragraph -->
+	<p>•</p>
+	<!-- /wp:paragraph -->
+	
+	<!-- wp:post-terms {"term":"category"} /--></div>
+	<!-- /wp:group -->
+	
+	<!-- wp:post-featured-image {"height":"600px","align":"wide","className":"is-style-height230"} /--></div>
+	<!-- /wp:group -->
+	
+	<!-- wp:group {"tagName":"main","className":"site-content","style":{"spacing":{"padding":{"top":"50px","bottom":"50px","right":"0","left":"0"},"margin":{"top":"0","bottom":"0"}}}} -->
+	<main class="wp-block-group site-content" style="margin-top:0;margin-bottom:0;padding-top:50px;padding-right:0;padding-bottom:50px;padding-left:0"><!-- wp:post-content {"layout":{"type":"constrained"}} /-->
+	
+	<!-- wp:group {"layout":{"inherit":true,"type":"constrained"}} -->
+	<div class="wp-block-group"><!-- wp:group {"style":{"spacing":{"padding":{"top":"50px"}}},"layout":{"inherit":true,"type":"constrained"}} -->
+	<div class="wp-block-group" style="padding-top:50px"><!-- wp:columns -->
+	<div class="wp-block-columns"><!-- wp:column -->
+	<div class="wp-block-column"><!-- wp:post-navigation-link {"type":"previous","label":"«","showTitle":true,"className":"is-style-hovershadow"} /--></div>
+	<!-- /wp:column -->
+	
+	<!-- wp:column {"width":"20px","className":"gs-mobile-hide"} -->
+	<div class="wp-block-column gs-mobile-hide" style="flex-basis:20px"></div>
+	<!-- /wp:column -->
+	
+	<!-- wp:column -->
+	<div class="wp-block-column"><!-- wp:post-navigation-link {"textAlign":"right","label":"»","showTitle":true,"className":"is-style-hovershadow"} /--></div>
+	<!-- /wp:column --></div>
+	<!-- /wp:columns --></div>
+	<!-- /wp:group -->
+	
+	<!-- wp:post-terms {"term":"post_tag"} /-->
 	
 	<!-- wp:spacer {"height":"60px"} -->
 	<div style="height:60px" aria-hidden="true" class="wp-block-spacer"></div>
 	<!-- /wp:spacer -->
 	
-	<!-- wp:pattern {"slug":"greenlight/parts-commentquery"} /--></div>
+	<!-- wp:comments {"className":"wp-block-comments-query-loop "} -->
+	<div class="wp-block-comments wp-block-comments-query-loop"><!-- wp:comments-title {"style":{"spacing":{"margin":{"bottom":"40px"}}}} /-->
+	
+	<!-- wp:comment-template -->
+	<!-- wp:columns {"style":{"spacing":{"margin":{"bottom":"25px"}}}} -->
+	<div class="wp-block-columns" style="margin-bottom:25px"><!-- wp:column {"width":"40px"} -->
+	<div class="wp-block-column" style="flex-basis:40px"><!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /--></div>
+	<!-- /wp:column -->
+	
+	<!-- wp:column {"style":{"spacing":{"blockGap":"2px"}}} -->
+	<div class="wp-block-column"><!-- wp:comment-author-name /-->
+	
+	<!-- wp:group {"className":"is-style-default","style":{"spacing":{"margin":{"top":"0px","bottom":"0px"},"blockGap":"10px"}},"fontSize":"xs","layout":{"type":"flex","verticalAlignment":"top"}} -->
+	<div class="wp-block-group is-style-default has-xs-font-size" style="margin-top:0px;margin-bottom:0px"><!-- wp:comment-date {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"textColor":"lightgrey","fontSize":"xsmall"} /-->
+	
+	<!-- wp:comment-edit-link {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"fontSize":"xsmall"} /--></div>
+	<!-- /wp:group -->
+	
+	<!-- wp:spacer {"height":"10px"} -->
+	<div style="height:10px" aria-hidden="true" class="wp-block-spacer"></div>
+	<!-- /wp:spacer -->
+	
+	<!-- wp:comment-content /-->
+	
+	<!-- wp:comment-reply-link {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"fontSize":"s"} /--></div>
+	<!-- /wp:column --></div>
+	<!-- /wp:columns -->
+	<!-- /wp:comment-template -->
+	
+	<!-- wp:group {"className":"has-small-font-size","style":{"spacing":{"margin":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|40"},"padding":{"bottom":"var:preset|spacing|30"}},"border":{"bottom":{"color":"var:preset|color|border","width":"1px"},"top":[],"right":[],"left":[]}}} -->
+	<div class="wp-block-group has-small-font-size" style="border-bottom-color:var(--wp--preset--color--border);border-bottom-width:1px;margin-top:var(--wp--preset--spacing--60);margin-bottom:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--30)"><!-- wp:comments-pagination {"paginationArrow":"arrow","style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"layout":{"type":"flex","justifyContent":"space-between"}} -->
+	<!-- wp:comments-pagination-previous /-->
+	
+	<!-- wp:comments-pagination-numbers /-->
+	
+	<!-- wp:comments-pagination-next /-->
+	<!-- /wp:comments-pagination --></div>
+	<!-- /wp:group -->
+	
+	<!-- wp:post-comments-form /--></div>
+	<!-- /wp:comments --></div>
 	<!-- /wp:group --></main>
 	<!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"greenlight","tagName":"footer","className":"site-footer is-style-no-margin"} /-->
