--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,6 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"0"}},"className":"site-content is-style-no-margin","layout":{"type":"constrained"}} -->
-<main class="wp-block-group site-content is-style-no-margin">
-    <!-- wp:pattern {"slug":"greenlight/hero-main"} /-->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"0"}},"className":"site-content","layout":{"type":"constrained"}} -->
+<main class="wp-block-group site-content">
     <!-- wp:pattern {"slug":"greenlight/brandbook"} /-->
 </main>
 <!-- /wp:group -->
