--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: GreenLight
-Theme URI: https://greenlightblocks.com/stylebook
+Theme URI: https://greenlightbuilder.pro/stylebook
 Author: Wpsoul
-Author URI: https://greenlightblocks.com/
+Author URI: https://greenlightbuilder.pro/
 Description: GreenSLight is boilerplate theme for FSE with maximum perfomance and flexibility. 
 Tags: e-commerce, block-patterns, block-styles, editor-style, full-site-editing, full-width-template, rtl-language-support, template-editing, translation-ready, wide-blocks
 Requires at least: 6.7
