--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: GreenLight
-Theme URI: https://greenlightbuilder.pro/stylebook
+Theme Name: Greenlight
+Theme URI: https://github.com/wpsoul/greenlight
 Author: Wpsoul
 Author URI: https://greenlightbuilder.pro/
-Description: GreenSLight is boilerplate theme for FSE with maximum perfomance and flexibility. 
+Description: GreenLight is boilerplate theme for FSE with maximum perfomance and flexibility. 
 Tags: e-commerce, block-patterns, block-styles, editor-style, full-site-editing, full-width-template, rtl-language-support, template-editing, translation-ready, wide-blocks
 Requires at least: 6.7
 Tested up to: 6.8
