--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header","theme":"greenlight","tagName":"header","className":"site-header"} /-->
 <!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"0"}},"className":"site-content","layout":{"type":"constrained"}} -->
 <main class="wp-block-group site-content">
-    <!-- wp:pattern {"slug":"greenlight/brandbook"} /-->
+    <!-- wp:pattern {"slug":"greenlight/homepattern"} /-->
 </main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","theme":"greenlight","tagName":"footer","className":"site-footer is-style-no-margin"} /-->
