--- a/templates/single.html
+++ b/templates/single.html
@@ -50,8 +50,8 @@
 	<!-- /wp:spacer -->
 	
 	<!-- wp:comments {"className":"wp-block-comments-query-loop "} -->
-	<div class="wp-block-comments wp-block-comments-query-loop"><!-- wp:comments-title {"style":{"spacing":{"margin":{"bottom":"40px"}}}} /-->
-	
+	<div class="wp-block-comments wp-block-comments-query-loop"><!-- wp:comments-title {"style":{"spacing":{"margin":{"bottom":"40px"}}},"fontSize":"m"} /-->
+
 	<!-- wp:comment-template -->
 	<!-- wp:columns {"style":{"spacing":{"margin":{"bottom":"25px"}}}} -->
 	<div class="wp-block-columns" style="margin-bottom:25px"><!-- wp:column {"width":"40px"} -->
@@ -59,10 +59,10 @@
 	<!-- /wp:column -->
 	
 	<!-- wp:column {"style":{"spacing":{"blockGap":"2px"}}} -->
-	<div class="wp-block-column"><!-- wp:comment-author-name /-->
+	<div class="wp-block-column"><!-- wp:comment-author-name {"style":{"typography":{"lineHeight":"1.5"}},"fontSize":"s"} /-->
 	
-	<!-- wp:group {"className":"is-style-default","style":{"spacing":{"margin":{"top":"0px","bottom":"0px"},"blockGap":"10px"}},"fontSize":"xs","layout":{"type":"flex","verticalAlignment":"top"}} -->
-	<div class="wp-block-group is-style-default has-xs-font-size" style="margin-top:0px;margin-bottom:0px"><!-- wp:comment-date {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"textColor":"lightgrey","fontSize":"xsmall"} /-->
+	<!-- wp:group {"className":"is-style-default","style":{"spacing":{"margin":{"top":"0px","bottom":"0px"},"blockGap":"10px"},"typography":{"lineHeight":"1.5"}},"fontSize":"xs","layout":{"type":"flex","verticalAlignment":"top"}} -->
+	<div class="wp-block-group is-style-default has-xs-font-size" style="margin-top:0px;margin-bottom:0px;line-height:1.5"><!-- wp:comment-date {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"textColor":"lightgrey","fontSize":"xs"} /-->
 	
 	<!-- wp:comment-edit-link {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"fontSize":"xsmall"} /--></div>
 	<!-- /wp:group -->
@@ -71,9 +71,9 @@
 	<div style="height:10px" aria-hidden="true" class="wp-block-spacer"></div>
 	<!-- /wp:spacer -->
 	
-	<!-- wp:comment-content /-->
+	<!-- wp:comment-content {"fontSize":"s"} /-->
 	
-	<!-- wp:comment-reply-link {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"fontSize":"s"} /--></div>
+	<!-- wp:comment-reply-link {"style":{"elements":{"link":{"color":{"text":"var:preset|color|lightgrey"}}}},"fontSize":"xs"} /--></div>
 	<!-- /wp:column --></div>
 	<!-- /wp:columns -->
 	<!-- /wp:comment-template -->
